--- a/puja/homam2.html
+++ b/puja/homam2.html
@@ -685,7 +685,7 @@
         ಓಂ ಭೂರ್ಭುವಃ ಸ್ವಾಹಾ |<br>
         ಓಂ ಭೂರ್ಭುವಸ್ಸುವಃ ಸ್ವಾಹಾ |<br>
         ಓಂ ಭೂರ್ಭುವಸ್ಸುವಃ ಓಂ ತತ್ಸವಿತುರ್ವರೇಣ್ಯಂ ಭರ್ಗೋ ದೇವಸ್ಯ ಧೀಮಹಿ |<br>
-        ಧಿಯೋ ಯೋ ನಮಃ ಪ್ರಚೋದಯಾತ್ ಸ್ವಾಹಾ |<br>
+        ಧಿಯೋ ಯೋ ನಃ ಪ್ರಚೋದಯಾತ್ ಸ್ವಾಹಾ |<br>
         ಗಾಯತ್ರ್ಯೈ ಸ್ವಾಹಾ |<br>
         ಗಾಯತ್ರ್ಯ ಇದಂ ನ ಮಮ ||<br>
         <span class="ENG">(Om svaahaa |<br>
@@ -716,17 +716,18 @@
     <h4><strong>c. ಮಹಾಲಕ್ಷ್ಮಿ - Havis: Dried Lotus flower<span class="ENG">(Maha Lakshmi)</span></strong></h4>
     <div>
         ಓಂ ಶ್ರಿಯಃ ಸ್ವಾಹಾ |<br>
-        ಓಂ ಶ್ರೀಂ ಹ್ರೀಂ ಕ್ಲೀಂ ಮಹಾಲಕ್ಷ್ಮೀಃ ಏ ಹ್ಯೇಹಿ ಸರ್ವಸೌಭಾಗ್ಯಂ ದೇಹಿ ಮೇ ಸ್ವಾಹಾ ||<br>
-        <span class="ENG">(Om shriyah svaahaa |<br>
-            Om shreem hreem kleem mahaalakshmee e hyehi sarvasaubhagyam dhehi me svaahaa ||)</span>
+        ಓಂ ಶ್ರೀಂ ಹ್ರೀಂ ಕ್ಲೀಂ ಮಹಾಲಕ್ಷ್ಮ್ಯೈ ನಮಃ | <br>
+        ಯಾ ಹ್ಯೇಹಿ ಸರ್ವಸೌಭಾಗ್ಯಂ ದೇಹಿ ಮೇ ಸ್ವಾಹಾ || <br>
+        <span class="ENG">(Om shriyah svaahaa | <br>
+            Om shreem hreem kleem mahaalakshmyai namah | <br>
+            yaa hyehi sarvasaubhaagyam dehi me svaahaa ||)</span>
     </div>
 
     <!-- d. Ganapati -->
     <h4><strong>d. ಗಣಪತಿ - Havis: White Arka plant stick<span class="ENG">(Ganapati)</span></strong></h4>
     <div>
-        ಓಂ ಶ್ರೀಂ ಹ್ರೀಂ ಕ್ರೀಂ ಗ್ಲಾಂ ಗಂ ಗಣಪತಯೇ ವರವರದ ಸರ್ವಜನಮ್ ಮೇ ವಶಮಾನಯ ಸ್ವಾಹಾ ||<br>
-        <span class="ENG">(Om shreem hreem kleem glam gam ganapataye varavarada sarvajanam me vashamanaaya
-            svaahaa ||)</span>
+        ಓಂ ಶ್ರೀಂ ಹ್ರೀಂ ಕ್ಲೀಂ ಗ್ಲೌಂ ಗಂ ಗಣಪತಯೇ ವರವರದ ಸರ್ವಜನಮ್ ಮೇ ವಶ್ಯಮಾನಯ ಸ್ವಾಹಾ || <br>
+        <span class="ENG">(Om srim hrim klim glaum gam ganapataye varavarada sarvajamam me vashyamanaya svaha ||)</span>
     </div>
 
     <!-- e. Garuda -->
@@ -775,8 +776,8 @@
     <div>
         ಓಂ ಕ್ರೀಂ ಕೃಷ್ಣಾಯ |<br>
         ಗೋವಿಂದಾಯ |<br>
-        ಗೋಪೀಜನ ವಲ್ಲಭಾಯ ಸ್ವಾಹಾ ||<br>
-        (ಮೂರು ಬಾರಿ ಪುನರಾವರ್ತನೆ)<br>
+        ಗೋಪೀಜನವಲ್ಲಭಾಯ ಸ್ವಾಹಾ ||<br>
+        (3 ಬಾರಿ)<br>
         <span class="ENG">(Om kleem krishnaya |<br>
             govindaya |<br>
             gopijan vallabhaya svaahaa ||<br>
@@ -799,9 +800,9 @@
     <div>
         ಓಂ ಐಂ ಹ್ರೀಂ ಶ್ರೀಂ |<br>
         ಓಂ ನಮೋ ಭಗವತಿ ಶ್ರೀಮಾತಂಗೀಶ್ವರಿ |<br>
-        ಸರ್ವಜನ ಮನೋಹರಿ |<br>
-        ಸರ್ವ ಮುಖರಂಜನಿ |<br>
-        ಸರ್ವರಾಜ ವಶಂಕರಿ |<br>
+        ಸರ್ವಜನಮನೋಹರಿ |<br>
+        ಸರ್ವಮುಖರಂಜನಿ |<br>
+        ಸರ್ವರಾಜವಶಂಕರಿ |<br>
         ಸರ್ವ ಸ್ತ್ರೀ ಪುರುಷ ವಶಂಕರಿ |<br>
         ಸರ್ವ ದುಷ್ಟಮೃಗ ವಶಂಕರಿ |<br>
         ಸರ್ವ ಸತ್ತ್ವ ವಶಂಕರಿ |<br>
@@ -855,7 +856,7 @@
         ಸರ್ವಸ್ಮೈ ವಾಚ ಈಶಾನಾ |<br>
         ಚಾರುಮಾಮಿಹ ವಾದಯೇತ್ ||<br>
         ನಕುಲಿ ವಾಗೀಶ್ವರ್ಯೈ ಸ್ವಾಹಾ |<br>
-        ವಾಗೀಶ್ವರ್ಯ ಇದಂ ನ ಮಮ ||<br>
+        ವಾಗೀಶ್ವರ್ಯೈ ಇದಂ ನ ಮಮ ||<br>
         <span class="ENG">(Om aim oshtha pithana nakuli |<br>
             dantaih parivrutta pavih |<br>
             sarvasmai vaach eeshaanaa |<br>
@@ -868,13 +869,13 @@
     <h4><strong>n. ಸರಸ್ವತಿ - Havis: Vallarai<span class="ENG">(Saraswati)</span></strong></h4>
     <div>
         ಓಂ ಪ್ರಣೋದೇವೀ ಸರಸ್ವತೀ |<br>
-        ವಾಜೇಭಿ ರ್ವಾಜಿನೀವತೀ |<br>
-        ಧೀನಾ ಮವಿತ್ರವತ್ |<br>
+        ವಾಜೇಭಿರ್ವಾಜಿನೀವತೀ |<br>
+        ಧೀನಾಮವಿತ್ರ್ಯವತು |<br>
         ಸರಸ್ವತ್ಯೈ ಸ್ವಾಹಾ |<br>
         ಸರಸ್ವತ್ಯ ಇದಂ ನ ಮಮ ||<br>
         <span class="ENG">(Om pranodevee saraswatee |<br>
             vaajebhi rvaajineevatee |<br>
-            dheenaa mavitravat |<br>
+            dhinaam-avitryavatu |<br>
             saraswatyai svaahaa |<br>
             saraswaty idam na mama ||)</span>
     </div>
@@ -883,12 +884,10 @@
     <h4><strong>o. ಗೌರಿ - Havis: Turmeric piece<span class="ENG">(Gauri)</span></strong></h4>
     <div>
 
-        ಓಂ ಗೌರೀ ಮಿಮಾಯ ಸಲಿಲಾನಿ | <br>
-        ತಕ್ಷ ತ್ಯೇಕಪದೀ ದ್ವಿಪದೀ | <br>
-        ಸಾ ಚತುಷ್ಪದೀ ಅಷ್ಟಾಪದೀ ನವಪದೀ | <br>
-        ಬಭೂವುಷೀ ಸಹಸ್ರಾಕ್ಷರಾ ಪರಮೇ ವ್ಯೋಮನ್ | <br>
+        ಓಂ ಗೌರೀರ್ಮಿಮಾಯ ಸಲಿಲಾನಿ ತಕ್ಷತ್ಯೇಕಪದೀ ದ್ವಿಪದೀ | <br>
+        ಸಾ ಚತುಷ್ಪದೀಽಷ್ಟಾಪದೀ ನವಪದೀ ಬಭೂವುಷೀ ಸಹಸ್ರಾಕ್ಷರಾ ಪರಮೇ ವ್ಯೋಮನಿ | <br>
         ಗೌರ್ಯೈ ಸ್ವಾಹಾ ॥ <br>
-        ಗೌರ್ಯ ಇದಂ ನ ಮಮ ||<br>
+        ಗೌರ್ಯೈ ಇದಂ ನ ಮಮ ||<br>
         <span class="ENG">(Om Gauri mimaya salilani |<br>
             taksha tyekapadi dwipadi |<br>
             saa chatushpadi | ashtaapadi | navapadi |<br>
@@ -900,56 +899,74 @@
     <!-- p. Pratyangiraa -->
     <h4><strong>p. ಪ್ರತ್ಯಂಗಿರಾ - Havis: Giloy twigs<span class="ENG">(Pratyangiraa)</span></strong></h4>
     <div>
-        ಓಂ ಯಾಂ ಕಲ್ಪಯಂತಿ ನೋ ರಯಃ ಕ್ರೂರಾನ್ ಕೃತ್ಯಾನ್ ವಧೂಮಿವ |<br>
-        ತಾಂ ಬ್ರಹ್ಮಣಾಪ ನಿರ್ಣುದ್ಮಃ ಪ್ರತ್ಯಕ್ಕರ್ತಾರ ಮೃಚ್ಚತು ||<br>
-        ಪ್ರತ್ಯಂಗಿರಾ ಉಗ್ರ ಕೃತ್ಯಾಯೈ ಸ್ವಾಹಾ |<br>
-        ಪ್ರತ್ಯಂಗಿರಾ ಉಗ್ರಕೃತ್ಯಾಯ ಇದಂ ನ ಮಮ ||<br>
-        <span class="ENG">(Om yaam kalpayanti no rayah krooraan krutyaan vadhoomiva |<br>
-            taam brahmanaap nirnudmah pratyakkartaar mrchchhatu ||<br>
-            pratyangiraa ugra krutyai svaahaa |<br>
-            pratyangiraa ugrakrutyai idam na mama ||)</span>
+        ಓಂ ಯಾಂ ಕಲ್ಪಯಂತಿ ನಃ ಅರಯಃ ಕ್ರೂರಾನ್ ಕೃತ್ಯಾನ್ ವಧೂಮಿವ | <br>
+        ತಾಂ ಬ್ರಹ್ಮಣಃ ಅಪ ನಿರ್ಣುದ್ಮಃ ಪ್ರತ್ಯಕ್ಕರ್ತಾರಮೃಚ್ಚತು || <br>
+        ಪ್ರತ್ಯಂಗಿರಾ ಉಗ್ರಕೃತ್ಯಾಯೈ ಸ್ವಾಹಾ |<br>
+        ಪ್ರತ್ಯಂಗಿರಾ ಉಗ್ರಕೃತ್ಯಾಯೈ ಇದಂ ನ ಮಮ ||<br>
+        <span class="ENG">(Om yaam kalpayanti no aryah krooraan krutyaan vadhoomiva |<br>
+            taam brahmanah apa nirnudmah pratyak-kartaar mrchchhatu ||<br>
+            pratyangiraa ugrakrutyaayai svaahaa |<br>
+            pratyangiraa ugrakrutyaayai idam na mama ||)</span>
     </div>
 
     <h2>ವ್ಯಾಹೃತಿ ಮಂತ್ರಗಳು <span class="ENG">(Vyahriti mantras)</h2>
 
     <div>
-        ಭೂ॑ರನ್ನ॒ಮ॒ಗ್ನಯೇ॑ ಪೃಥಿ॒ವ್ಯೈ॑ ಸ್ವಾ॑ಹಾ ।<br>
+        ಭೂರನ್ನಮಗ್ನಯೇ ಪೃಥಿವ್ಯೈ ಸ್ವಾಹಾ | <br>
+        ಭುವೋಽನ್ನಂ ವಾಯವೇಽನ್ತರಿಕ್ಷಾಯ ಸ್ವಾಹಾ | <br>
+        ಸುವರನ್ನಮಾದಿತ್ಯಾಯ ದಿವೇ ಸ್ವಾಹಾ | <br>
+        ಭೂರ್ ಭುವಃ ಸುವರನ್ನಂ ಚಂದ್ರಮಸೇ ದಿಗ್ಭ್ಯಃ ಸ್ವಾಹಾ | <br>
+        ನಮೋ ದೇವೇಭ್ಯಃ ಸ್ವಧಾ ಪಿತೃಭ್ಯೋ ಭೂರ್ ಭುವಃ ಸುವರನ್ನಮೋಂ || ೧ || <br>
+
+        <!-- ಭೂ॑ರನ್ನ॒ಮ॒ಗ್ನಯೇ॑ ಪೃಥಿ॒ವ್ಯೈ॑ ಸ್ವಾ॑ಹಾ ।<br>
         ಭು॒ವೋ॒ಽನ್ನಂ॒ ವಾಯ॑ವೇ॒ಽಂತ॒ರಿಕ್ಷಾ॑ಯ ಸ್ವಾ॑ಹಾ ।<br>
         ಸು॒ವರ॒ನ್ನ॒ಮಾ॒ದಿತ್ಯಾ॑ಯ ದಿ॒ವೇ॑ ಸ್ವಾ॑ಹಾ ।<br>
         ಭೂ॑ರ್ಭು॒ವಸ್ಸು॒ವರ॒ನ್ನಂ॒ ಚಂದ್ರ॑ಮಸೇ॒ ದಿಗ್ಭ್ಯಃ॑ ಸ್ವಾ॑ಹಾ ।<br>
-        ನಮೋ॑ ದೇ॒ವೇಭ್ಯಃ॒ ಸ್ವಧಾ॑ ಪಿ॒ತೃಭ್ಯೋ॒ ಭೂ॑ರ್ಭು॒ವಃ॒ ಸು॒ವರ॒ನ್ನ॒ಮೋ॑ಂ || ೧ ||<br>
+        ನಮೋ॑ ದೇ॒ವೇಭ್ಯಃ॒ ಸ್ವಧಾ॑ ಪಿ॒ತೃಭ್ಯೋ॒ ಭೂ॑ರ್ಭು॒ವಃ॒ ಸು॒ವರ॒ನ್ನ॒ಮೋ॑ಂ || ೧ ||<br> -->
 
-        <span class="ENG">(Bhoor annam agnaye prithivyai svaahaa ।<br>
-            bhuvo'nnam vaayave'ntarikshaaya svaahaa ।<br>
-            Suvar annam aadityaaya dive svaahaa ।<br>
-            Bhoor bhuvas suvar annam chandramase digbhyah svaahaa ।<br>
-            Namo devebhyah svadhaa pitrubhyah bhoor bhuvah suvar annamoṃ || 1 ||)</span>
+        <span class="ENG">(bhoor annam agnaye prithivyai svaahaa |<br>
+            bhuvo'nnam vaayave'ntarikshaaya svaahaa |<br>
+            Suvar annam aadityaaya dive svaahaa |<br>
+            Bhoor bhuvas suvar annam chandramase digbhyah svaahaa |<br>
+            Namo devebhyah svadhaa pitrubhyah bhoor bhuvah suvar annamoṃ || 1 ||)</span><br>
     </div>
 
     <div>
-        ಭೂ॑ರಗ್ನಯೇ॑ ಪೃಥಿ॒ವ್ಯೈ॑ ಸ್ವಾ॑ಹಾ ।<br>
+        ಭೂರಗ್ನಯೇ ಪೃಥಿವ್ಯೈ ಸ್ವಾಹಾ |<br>
+        ಭುವೋ ವಾಯವೇಽನ್ತರಿಕ್ಷಾಯ ಸ್ವಾಹಾ |<br>
+        ಸುವರಾದಿತ್ಯಾಯ ದಿವೇ ಸ್ವಾಹಾ |<br>
+        ಭೂರ್ ಭುವಃ ಸುವಃ ಚಂದ್ರಮಸೇ ದಿಗ್ಭ್ಯಃ ಸ್ವಾಹಾ |<br>
+        ನಮೋ ದೇವೇಭ್ಯಃ ಸ್ವಧಾ ಪಿತೃಭ್ಯೋ ಭೂರ್ ಭುವಃ ಸುವರನ್ನಮೋಂ || ೨ ||<br>
+        
+        <!-- ಭೂ॑ರಗ್ನಯೇ॑ ಪೃಥಿ॒ವ್ಯೈ॑ ಸ್ವಾ॑ಹಾ ।<br>
         ಭು॒ವೋ॒ ವಾಯ॑ವೇ॒ಽಂತ॒ರಿಕ್ಷಾ॑ಯ ಸ್ವಾ॑ಹಾ ।<br>
         ಸು॒ವರಾ॒ದಿತ್ಯಾ॑ಯ ದಿ॒ವೇ॑ ಸ್ವಾ॑ಹಾ ।<br>
         ಭು॑ರ್ಭು॒ವಸ್ಸು॒ವಶ್ಚಂ॒ದ್ರಮ॑ಸೇ॒ ದಿಗ್ಭ್ಯಃ॑ ಸ್ವಾ॑ಹಾ ।<br>
-        ನಮೋ॑ ದೇ॒ವೇಭ್ಯಃ॒ ಸ್ವಧಾ॑ ಪಿ॒ತೃಭ್ಯೋ॒ ಭೂ॑ರ್ಭು॒ವಃ॒ಸು॒ವರಗ್ನ॒ ಓ॑ಮ್ || ೨ ||<br>
+        ನಮೋ॑ ದೇ॒ವೇಭ್ಯಃ॒ ಸ್ವಧಾ॑ ಪಿ॒ತೃಭ್ಯೋ॒ ಭೂ॑ರ್ಭು॒ವಃ॒ಸು॒ವರಗ್ನ॒ ಓ॑ಮ್ || ೨ ||<br> -->
 
-        <span class="ENG">(Bhoor agnaye prithivyai svaahaa ।<br>
-            Bhuvo vaayave'ntarikshaaya svaahaa ।<br>
-            Suvar aadityaaya dive svaahaa ।<br>
-            Bhur bhuvas suvas chandramase digbhyah svaahaa |<br>
-            Namo devebhyah svadhaa pitrubhyah bhoor bhuvah suvar agna om || 2 ||)</span>
+        <span class="ENG">(bhoor annam agnaye prithivyai svaahaa |<br>
+            bhuvo'nnam vaayave'ntarikshaaya svaahaa |<br>
+            Suvar annam aadityaaya dive svaahaa |<br>
+            Bhoor bhuvas suvar annam chandramase digbhyah svaahaa |<br>
+            Namo devebhyah svadhaa pitrubhyah bhoor bhuvah suvar annamoṃ || 2 ||)</span><br>
     </div>
 
     <div>
-        ಭೂ॑ರಗ್ನಯೇ॑ ಚ ಪೃಥಿ॒ವ್ಯೈ॑ ಚ ಮಹ॑ತೇ ಚ ಸ್ವಾ॑ಹಾ ।<br>
+        ಭೂರಗ್ನಯೇ ಚ ಪೃಥಿವ್ಯೈ ಚ ಮಹತೇ ಚ ಸ್ವಾಹಾ |<br>
+        ಭುವೋ ವಾಯವೇ ಚಾಂತರಿಕ್ಷಾಯ ಚ ಮಹತೇ ಚ ಸ್ವಾಹಾ |<br>
+        ಸುವರಾದಿತ್ಯಾಯ ಚ ದಿವೇ ಚ ಮಹತೇ ಚ ಸ್ವಾಹಾ |<br>
+        ಭೂರ್ ಭುವಃ ಸುವಃ ಚಂದ್ರಮಸೇ ಚ ನಕ್ಷತ್ರೇಭ್ಯಶ್ಚ ದಿಗ್ಭ್ಯಶ್ಚ ಮಹತೇ ಚ ಸ್ವಾಹಾ |<br>
+        ನಮೋ ದೇವೇಭ್ಯಃ ಸ್ವಧಾ ಪಿತೃಭ್ಯೋ ಭೂರ್ ಭುವಃ ಸುವಃ ಮಹಃ ಓಂ || ೩ ||<br>
+
+        <!-- ಭೂ॑ರಗ್ನಯೇ॑ ಚ ಪೃಥಿ॒ವ್ಯೈ॑ ಚ ಮಹ॑ತೇ ಚ ಸ್ವಾ॑ಹಾ ।<br>
         ಭು॒ವೋ॒ ವಾಯ॑ವೇ ಚಾಂ॒ತರಿ॑ಕ್ಷಾಯ ಚ ಮಹ॑ತೇ ಚ ಸ್ವಾ॑ಹಾ ।<br>
         ಸು॒ವರಾ॒ದಿತ್ಯಾ॑ಯ ಚ ದಿ॒ವೇ॑ ಚ ಮಹ॑ತೇ ಚ ಸ್ವಾ॑ಹಾ ।<br>
         ಭೂ॑ರ್ಭು॒ವಸ್ಸು॒ವಶ್ಚಂ॒ದ್ರಮ॑ಸೇ ಚ ನಕ್ಷ॑ತ್ರೇಭ್ಯಶ್ಚ॒ ದಿಗ್ಭ್ಯಶ್ಚ॒ ಮಹ॑ತೇ ಚ ಸ್ವಾ॑ಹಾ ।<br>
-        ನಮೋ॑ ದೇ॒ವೇಭ್ಯಃ॒ ಸ್ವಧಾ॑ ಪಿ॒ತೃಭ್ಯೋ॒ ಭು॑ರ್ಭು॒ವಃ॒ ಸು॒ವರ್ಮ॒ಹರೋ॑ಂ ॥ ೩ ॥<br>
+        ನಮೋ॑ ದೇ॒ವೇಭ್ಯಃ॒ ಸ್ವಧಾ॑ ಪಿ॒ತೃಭ್ಯೋ॒ ಭು॑ರ್ಭು॒ವಃ॒ ಸು॒ವರ್ಮ॒ಹರೋ॑ಂ ॥ ೩ ॥<br> -->
 
-        <span class="ENG">(Bhoor agnaye cha prithivyai cha mahate cha svaahaa ।<br>
-            Bhuvo vaayave chaantarikshaaya cha mahate cha svaahaa ।<br>
-            Suvar aadityaaya cha dive cha mahate cha svaahaa ।<br>
+        <span class="ENG">(bhoor annam agnaye cha prithivyai cha mahate cha svaahaa |<br>
+            bhuvo vaayave chaantarikshaaya cha mahate cha svaahaa |<br>
+            Suvar aadityaaya cha dive cha mahate cha svaahaa |<br>
             Bhoor bhuvas suvas chandramase cha nakshatrebhyas cha digbhyas cha mahate cha svaahaa |<br>
             Namo devebhyah svadhaa pitrubhyah bhur bhuvah suvar maharoṃ || 3 ||)</span>
     </div>
@@ -1002,7 +1019,7 @@
         ಮಾ॒ನಸ್ತೋ॑ಕೇ ತ॒ನಯೇ॒ ಮಾ॒ನ ಆಯು॑ಷಿ<br>
         ಮಾ॒ನೋ ಗೋ॑ಷು ಮಾ॒ನೋ ಅಶ್ವೇ॑ಷು ರೀರಿಷಃ ।<br>
         ವೀ॒ರಾನ್ ಮಾ॒ನೋ ರು॑ದ್ರಭಾಮಿ॒ತೋ ವಧೀ॑ಃ<br>
-        ಹವಿಷ್ಮ॑ನ್ತೋ ನಮ॒ಸಾ ವಿ॑ಧೇಮತೇ ॥<br>
+        ಹವಿಷ್ಮಂತೋ ನಮ॒ಸಾ ವಿ॑ಧೇಮತೇ ॥<br>
 
         <span class="ENG">(mā́nas tó́ke tanáye mā́na ā́yuṣi<br>
             mā́no gó́ṣu mā́no áshvéṣu rīriṣaḥ |<br>
@@ -1012,10 +1029,10 @@
 
     <div>
         ತ್ರ್ಯಾ॒ಯುಷಂ ಜಮದ॒ಗ್ನೇಃ ಕಶ್ಯ॑ಪಸ್ಯ ತ್ರ್ಯಾ॒ಯುಷಂ ।<br>
-        ಯದ್ದೇ॒ವಾನಾಂ॒ ತ್ರ್ಯಾ ಯು॑ಷಂ ತನ್ಮೇ॑ ಅಸ್ತು ತ್ರ್ಯಾ॒ಯುಷಂ ॥<br>
+        ಯದ್ದೇ॒ವಾನಾಂ॒ ತ್ರ್ಯ ಯು॑ಷಂ ತನ್ಮೇ॑ ಅಸ್ತು ತ್ರ್ಯಾ॒ಯುಷಂ ॥<br>
 
         <span class="ENG">(tryā́yuṣam jamadagné́ḥ kashyápasya tryā́yuṣam |<br>
-            yaddēvā́nām tryā́ yuṣam tánmḗ astu tryā́yuṣam ||)</span>
+            yaddēvā́nām trya yuṣam tánmḗ astu tryā́yuṣam ||)</span>
     </div>
 
     <div>
@@ -1043,13 +1060,13 @@
         </strong></p>
 
     <div>
-        ಪುನ॑ಸ್ತ್ವಾ॒ದಿತ್ಯಾ॒ ರುದ್ರಾ॒ ವಸವಃ॒ ಸಮಿ॑ಂಧತಾಂ ।<br>
-        ಪುನ॒ರ್ಬ್ರಹ್ಮ॑ಣೋ ವಸುನೀಥಯ॒ಜ್ಞಃ ।<br>
-        ಘೃ॒ತೇನ॒ ತ್ವಂ ತನು॑ವೋ ವರ್ಧಯಸ್ವ ।<br>
-        ಸ॒ತ್ಯಾಃ ಸ॑ಂತು ಯಜಮಾನಸ್ಯ॒ ಕಾಮಾಃ॑ ।<br>
 
-        ಸ್ವಾ॒ಹಾ ।<br>
-        ಅ॒ಗ್ನಯೇ॒ ವಸುನೀಥಾ॒ಯೇದಂ ॥<br>
+        ಪುನಸ್ತ್ವಾದಿತ್ಯಾರುದ್ರಾಸವಸವಃ ಸಮಿಂಧತಾಂ |<br>
+        ಪುನರ್ಬ್ರಹ್ಮಣೋ ವಸುನೀಥ ಯಜ್ಞಃ |<br>
+        ಘೃತೇನ ತ್ವಂ ತನುವೋ ವರ್ಧಯಸ್ವ |<br>
+        ಸತ್ಯಾಃ ಸಂತು ಯಜಮಾನಸ್ಯ ಕಾಮಾಃ ||<br>
+        ಸ್ವಾಹಾ |<br>
+        ಅಗ್ನಯೇ ವಸುನೀಥಾಯ ಇದಂ |<br>
 
         <span class="ENG">(púnastvā́dityā́ rudrā́ vasávaḥ sámíndhatām |<br>
             púnarbráhmaṇo vasunīthayajñaḥ |<br>
