--- a/general/swasti.html
+++ b/general/swasti.html
@@ -22,4 +22,16 @@
     
     ಮಂಗಲಂ ಕೋಸಲೇಂದ್ರಾಯ ಮಹನೀಯಗುಣಾತ್ಮನೇ |<br>
     ಚಕ್ರವರ್ತಿತನೂಜಾಯ ಸಾರ್ವಭೌಮಾಯ ಮಂಗಲಮ್ ||<br>
+
+    <span class="ENG">(svasti prajaabhyaH paripaalayantAM |<br>
+        nyaaYYena maargeNa mahIIM mahIshaaH |<br>
+        gobrAhmaNebhyaH shubhamastu nityaM |<br>
+        lokaaH samastaaH sukhino bhavantu ||<br>
+        kaale varShatu parjanyaH pRthivI sasyashaalinI |<br>
+        desho’yam kShobarahitaH brAhmaNaaH santu nirbhayaaH |<br>
+        aputraaH putriNaH santu putriNaH santu poutriNaH |<br>
+        adhanaaH sadhanaaH santu jIvantu sharadAM shatam ||<br>
+        mangalaM kosalendrAya mahanIyaguNAtmane |<br>
+        chakravartitanujaaya saarvabhaumaaya mangalaM ||<br>
+    </span>
 </p>
