--- a/general/achamanam.html
+++ b/general/achamanam.html
@@ -1,10 +1,12 @@
 <h2>ಆಚಮನಂ <span class="ENG">(Achamanam)</span></h2>
 
-<p>
-    First 3 verses, sip water and recite, ending with `svaha` (males)
-    and `namah` (females). Then, wash your hands.
-    Only lower lip should touch palm. No slurping sound.
-</p>
+<span class="ENG">
+    <p>
+        First 3 verses, sip water and recite, ending with `svaha` (males)
+        and `namah` (females). Then, wash your hands.
+        Only lower lip should touch palm. No slurping sound.
+    </p>
+</span>
 
 <p>
     ಓಂ ಕೇಶವಾಯ ಸ್ವಾಹಾ → ಓಂ ನಾರಾಯಣಾಯ ಸ್ವಾಹಾ → ಓಂ ಮಾಧವಾಯ ಸ್ವಾಹಾ<br>
