--- a/general/bhootoochchaatana.html
+++ b/general/bhootoochchaatana.html
@@ -1,5 +1,9 @@
 <h2>ಭೂತೋಚ್ಛಾಟನ <span class="ENG">(bhootOchchaaTana)</span></h2>
+
+<span class="ENG">
 <p>Smell akshata using deer mudra, then throw it below your left arm. If your partner is on your left, throw it below their left arm.</p>
+</span>
+
 <p>
     ಉತ್ತಿಷ್ಠಂತು ಭೂತಪಿಶಾಚಾಃ ಏತೇ ಭೂಮಿ ಭಾರಕಾಃ<br>
     <span class="ENG">
