--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
             </div>
 
             <div class="tile">
+                <h2>Homam</h2>
+                <ol>
+                    <li> <a href="puja/homam2.html">Homam</a> </li>
+                </ol>
+            </div>
+
+            <div class="tile">
                 <h2>General</h2>
                 <ol>
                     <li> <a href="stotram/daily-mantras.html">Daily Mantras</a> </li>
