--- a/general/pranayama.html
+++ b/general/pranayama.html
@@ -9,16 +9,23 @@
     </span>
 </p>
 
+
+<p>
+    ಓಂ ಭೂಃ॒ | ಓಂ ಭು॒ವಃ | ಓಂ ಸ್ವಃ॒ | ಓಂ ಮ॒ಹಃ | ಓಂ ಜ॒ನಃ | ಓಂ ತ॒ಪಃ | ಓಂ ಸ॑ತ್ಯಂ |
+    ಓಂ ತತ್ ಸ॑ವಿತುರ್ವರೇ॑ಣ್ಯಂ ಭಾ॒ರ್ಗೋ ದೇ॒ವಸ್ಯ ಧೀಮಹಿ॑ | ಧೀ॒ಯೋ ಯೋ ನಃ ಪ್ರಚೋ॒ದಯಾತ್ |
+    ಓಂ ಆ॒ಪೋ ಜ್ಯೋತಿ॑ ರಸೋಽಮೃ॒ತಂ ಬ್ರಹ್ಮ ಭೂ॒ರ್ಭುವಃ ಸ್ವ॒ರ॑ಓಂ ||
+</p>
+
 or
 
 <p>
     ಓಂ ಭೂಃ | ಓಂ ಭುವಃ | ಓಂ ಸುವಃ | ಓಂ ಮಹಃ | ಓಂ ಜನಃ | ಓಂ ತಪಃ | ಓಂ ಸತ್ಯಂ |<br>
     ಓಂ ತತ್ಸವಿತುರ್ವೇಣ್ಯಂ ಭರ್ಗೋ ದೇವಸ್ಯ ಧೀಮಹಿ ಧಿಯೋ ಯೋ ನಃ ಪ್ರಚೋದಯಾತ್ ||<br>
-    ಓಂ ಅಪೋ ಜ್ಯೋತಿ ರಸೋಮೃತಂ ಬ್ರಹ್ಮ ಭೂ-ರ್ಭು-ವಸ್ಸುವರೋಮ್ ||
+    ಓಂ ಆಪೋ ಜ್ಯೋತೀ ರಸೋಽಮೃತಂ ಬ್ರಹ್ಮ ಭೂರ್ಭುವಸ್ಸುವರೋಮ್ ॥
 
     <span class="ENG">
         om bhooh om bhuvah om suvah om mahah om janah om tapah om satyam<br>
         om tat-saviturvayam bhrgo devasya dhimahI dhiyo yoh pracodayaat<br>
-        om apo jyoti rosmRtam brahma bhU-r-bhuv-ssuvarom<br>
+        om apo jyoti rasO amRtam brahma bhU-r-bhuv-ssuvarom<br>
     </span>
 </p>
