--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                     <li> <a href="stotram/dattratreya-mantra.html">Dattatreya Chitta Sthira Mantra</a> </li>
                     <li> <a href="stotram/pitru-devata-stotram.html">Pitru Devata Stotram</a> </li>
                     <li> <a href="stotram/dakshinamurthy-stotram.html">Dakshinamurthy Stotram 🚧</a> </li>
+                    <li> <a href="stotram/rama-mantra.html">Rama Mantra</a> </li>
                 </ol>
             </div>
 
