--- a/general/deepaaradhana.html
+++ b/general/deepaaradhana.html
@@ -1,13 +1,15 @@
 <h2>ದೀಪ ನಮಸ್ಕಾರಂ <span class="ENG">(Deepaaradhana)</span></h2>
 
 <p>
-    ದೀಪತ್ವಂ ಬ್ರಹ್ಮರೂಪೋ ಸಿ ಜ್ಯೋತಿಷಾಂ ಪ್ರಭುರವ್ಯಯ:<br>
+    ದೀಪತ್ವಂ ಬ್ರಹ್ಮರೂಪೋಽಸಿ ಜ್ಯೋತಿಷಾಂ ಪ್ರಭುರವ್ಯಯಃ |<br>
     <span class="ENG">
-        deepatvaM brahmaroopO si jyOtishaaM prabhuravyaya<br>
+        deepatvaM brahmarupOsi jyOtishaaM prabhuravyaya |<br>
     </span>
 
-    ಸೌಭಾಗ್ಯಂ ದೇಹಿ ಪುತ್ರಾಂಶ್ಚ ಸರ್ವಾನ್ ಕಾಮಾಂಶ್ಚ ದೇಹಿಮೇ<br>
+    ಸೌಭಾಗ್ಯಂ ದೇಹಿ ಪುತ್ರಾಂಶ್ಚ ಸರ್ವಾನ್ ಕಾಮಾಂಶ್ಚ ದೇಹಿ ಮೇ ||<br>
     <span class="ENG">
-        saubhaagyaM daehi putraaMScha sarvaan kaamaaMScha daehimae<br>
+        saubhaagyaM daehi putraaMScha sarvaan kaamaaMScha daehi mae ||<br>
     </span>
 </p>
+
+
