--- a/general/ganapati-prarthana.html
+++ b/general/ganapati-prarthana.html
@@ -1,6 +1,6 @@
 <h2>ಗಣಪತಿ ಪ್ರಾರ್ಥನ <span class="ENG">(Ganapati Prarthana)</span></h2>
 <p>
-    ಶುಕ್ಲಾಂಬರಧರಂ ವಿಷ್ಣುಂ ಶಶಿವರ್ಣಂ ಚತುರ್ಭುಜಂ ।<br>
+    ಶುಕ್ಲಾಂಬರಧರಂ ವಿಷ್ಣುಂ ಶಶಿವರ್ಣಂ ಚತುರ್ಭುಜಮ್  । <br>
     <span class="ENG">
     Shukla-ambara-dharam Vissnnum ShashiVarnnam Catur-Bhujam<br>
     </span>
