--- a/puja/ganapati-puja.html
+++ b/puja/ganapati-puja.html
@@ -41,16 +41,16 @@
             Sree vinaayaka daevataaM uddiSya yaavaChchakti poojaaM karishyae
         </span>
     </b>
-    
+
     <h2>
         ಪಂಚೋಪಚಾರ <span class="ENG">(Panchoopachaara)</span></h2>
         <p>
-            ಭವಸಂಚಿತ ಪಾಪೌಘ ವಿಧ್ವಂಸನ ವಿಚಕ್ಷಣಂ<br>
+            ಭವಸಂಚಿತ-ಪಾಪೌಘ-ವಿಧ್ವಂಸನ-ವಿಚಕ್ಷಣಂ<br>
             <span class="ENG">
             bhavasaMchita paapaugha vidhvaMsana vichakshaNaM<br><br>
         </span>
         
-        ವಿಘ್ನಾಂಧಕಾರ ಭಾಸ್ವಂತಂ ವಿಘ್ನರಾಜ ಮಹಂಭಜೇ<br>
+        ವಿಘ್ನಾಂಧಕಾರ-ಭಾಸ್ವಂತಂ ವಿಘ್ನರಾಜ ಮಹಂಭಜೇ<br>
         <span class="ENG">
             vighnaaMdhakaara bhaasvaMtaM vighnaraaja mahaMbhajae<br><br>
         </span>
@@ -65,9 +65,9 @@
             paaSaaMkuSa dharaM daevaM dhyaayae tsiddhivinaayakaM<br><br>
         </span>
 
-        ಧ್ಯಾಯೇದ್ಗಜಾನನಂ ದೇವಂ ತಪ್ತಕಾಂಚನ ಸನ್ನಿಭಂ<br>
+		ಧ್ಯಾಯೇದ್ ಗಜಾನನಂ ದೇವಂ ತಪ್ತಕಾಂಚನಸನ್ನಿಭಂ<br>
         <span class="ENG">
-            dhaayaedgajaananaM daevaM taptakaaMchana sannibhaM<br><br>
+            dhaayaed gajaananaM daevaM taptakaaMchana sannibhaM<br><br>
         </span>
 
         ಚತುರ್ಭುಜಂ ಮಹಾಕಾಯಂ ಸರ್ವಾಭರಣಭೂಷಿತಂ<br>
