--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -95,7 +95,7 @@
         <b>ನಮೋಸ್ತು</b> ನೀಲಗ್ರೀವಾಯ <b>ಸಹಸ್ರಾಕ್ಷಾಯ</b> ತೇ ನಮಃ | ೨ | <br>
         <span class="ENG">Namostu Neelagreevaya Sahasraakshaaya Te Namah | 2 |<br></span><br>
 
-        <b>ಸಹಸ್ರಪಾಣಯೆ</b> ತುಭ್ಯಂ ನಮೋ ಮೀಢುಷ್ಟಮಾಯ ತೇ <br>
+        <b>ಸಹಸ್ರ ಬಾಹವೇ</b> ತುಭ್ಯಂ ನಮೋ ಮೀಢುಷ್ಟಮಾಯ ತೇ <br>
         <span class="ENG">SahasraPaaNayae Tubhyam Namo Meedhushtamaaya Te <br></span>
         ಕಪರ್ಧಿನೇ ನಮಸ್ತುಭ್ಯಂ ಕಾಲರೂಪಾಯ ತೇ ನಮಃ | ೩ | <br>
         <span class="ENG">Kapardine Namastubhyam Kaalaroopaaya Te Namah | 3 | <br></span><br>
@@ -112,7 +112,7 @@
 
         <b>ಪುಷ್ಟಾನಾಂ</b> ಪತಯೇ ತುಭ್ಯಂ ಕ್ಷೇತ್ರಾಣಾಂ ಪತಯೇ ನಮಃ <br>
         <span class="ENG">Pushtaanam Pataye Tubhyam Kshetraanam Pataye Namah <br></span>
-        <b>ಆತತಾವಿಸ್ವರೂಪಾಯ</b> ವನಾನಾಂ ಪತಯೇ ನಮಃ | ೬ | <br>
+        <b>ಆತತಾಯಿ ಸ್ವರೂಪಾಯ</b> ವನಾನಾಂ ಪತಯೇ ನಮಃ | ೬ | <br>
         <span class="ENG">AatataaviSwaroopaaya Vanaanam Pataye Namah | 6 | <br></span><br>
 
         ರೋಹಿತಾಯ <b>ಸ್ಥಪತಯೇ</b> ವೃಕ್ಷಾಣಾಂ ಪತಯೇ ನಮಃ <br>
