--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -80,6 +80,8 @@
 
     <h2>ಅಭಿಷೇಕಂ<span class="ENG">Abhishekam</span></h2>
 
+    <audio controls="controls" src="../audio/rudra-abhishekam.mp3"></audio>
+
     <p>
         For each verse pour some water on the lingam
     </p>
@@ -100,7 +102,7 @@
         ಕಪರ್ಧಿನೇ ನಮಸ್ತುಭ್ಯಂ ಕಾಲರೂಪಾಯ ತೇ ನಮಃ | ೩ | <br>
         <span class="ENG">Kapardine Namastubhyam Kaalaroopaaya Te Namah | 3 | <br></span><br>
 
-        ನಮಸ್ತೇ <b>ಚಾಽಽತ್ತಶಸ್ತ್ರಾಯ</b> ನಮಸ್ತೇ ಶೂಲಪಾಣಯೇ <br>
+        ನಮಸ್ತೇ ಚಾಽಽತ್ತ<b>ಶಸ್ತ್ರಾಯ</b> ನಮಸ್ತೇ ಶೂಲಪಾಣಯೇ <br>
         <span class="ENG">Namaste Chaaaa-ttashastraaya Namaste Shulapaanaye <br></span>
         ಹಿರಣ್ಯಪಾಣಯೇ ತುಭ್ಯಂ ಹಿರಣ್ಯಪತಯೇ ನಮಃ | ೪ | <br>
         <span class="ENG">Hiranyapaanaye Tubhyam Hiranyapataye Namah | 4 | <br></span><br>
