--- a/stotram/sharanagati-shlokas.html
+++ b/stotram/sharanagati-shlokas.html
@@ -16,6 +16,8 @@
 
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button><br>
 
+    <audio controls="controls" src="../audio/sharanagati-sholka.mp3"></audio>
+
     <span class="ENG">
         <h3>Explanation</h3>
 
