--- a/stotram/sharanagati-shlokas.html
+++ b/stotram/sharanagati-shlokas.html
@@ -29,8 +29,8 @@
 
     <h3>Shloka 1</h3>
 
-    ಶರಣಾಗತ ದೀನಾರ್ತ ಪರಿತ್ರಾಣ ಪರಾಯಣೇ । <br>
-    ಸರ್ವಸ್ಯಾರ್ತಿಹರೇ ದೇವಿ ನಾರಾಯಣಿ ನಮೋಸ್ತು ತೇ ॥ <br> <br>
+    ಶರಣಾಗತ-ದೀನಾರ್ತ-ಪರಿತ್ರಾಣ-ಪರಾಯಣೇ । <br>
+    ಸರ್ವಸ್ಯಾರ್ತಿಹರೇ ದೇವಿ ನಾರಾಯಣಿ ನಮೋऽಸ್ತು ತೇ ॥ <br> <br>
 
     <span class="ENG">
         शरणागतदीनार्तपरित्राणपरायणे । <br>
@@ -42,15 +42,15 @@
 
     <h3>Shloka 2</h3>
 
-    ಅಪಾರಾಧ ಸಹಸ್ರಾಣಿ ಕ್ರಿಯಂತೇ ಹರ್ಣಿಶಂ ಮಯಾ । <br>
-    ದಾಸೋಯಮಿತಿ ಮಾಂ ಮತ್ವಾ ಕ್ಷಮಸ್ವ ಪರಮೇಶ್ವರಿ ॥ <br> <br>
+    ಅಪಾರಾಧ-ಸಹಸ್ರಾಣಿ ಕ್ರಿಯಂತೇऽಹರ್ಣಿಶಂ ಮಯಾ । <br>
+    ದಾಸೋऽಯಮಿತಿ ಮಾಂ ಮತ್ವಾ ಕ್ಷಮಸ್ವ ಪರಮೇಶ್ವರಿ ॥ <br> <br>
 
     <span class="ENG">
         अपाराधसहस्राणि क्रियन्तेऽहर्निशं मया । <br>
         दासोऽयमिति मां मत्वा क्षमस्व परमेश्वरी ॥ <br> <br>
 
         aparādha-sahasrāṇi kriyante 'har-niśaṁ mayā । <br>
-        dāso 'yam iti māṁ matvā kṣamasva parameśvarī ॥ <br> <br>
+        dāso-'yam-iti māṁ matvā kṣamasva parameśvarī ॥ <br> <br>
     </span>
 
 
