--- a/puja/shiva-abhishekam.html
+++ b/puja/shiva-abhishekam.html
@@ -168,10 +168,10 @@
     <h2>ಧೂಪಂ<span class="ENG">Dhoopam</span></h2>
 
     <p>
-        ವನಸ್ಪತಿ ರಸೈರ್ ದಿವ್ಯೈಃ ನಾನಾ ಗಂಧೈಃ ಸುಸಂಯುತಂ <br>
-        <span class="ENG">vanaspati rasair divyaih naanaa gandhaih susamyutam <br></span>
-        ಆಘ್ರೇಯ ಸ್ಸರ್ವ ದೇವಾನಾಂ ಧೂಪೋಯಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ <br>
-        <span class="ENG">aaghreyah sarva devaanaam dhoopoyam pratigrihyataam <br></span>
+        ವನಸ್ಪತಿ-ರಸೈ-ರ್ದಿವ್ಯೈ-ರ್ನಾನಾ-ಗಂಧೈ-ಸ್ಸುಸಂಯುತಂ | <br>
+        <span class="ENG">vanaspati rasair divyair naanaa gandhaih sussamyutam <br></span>
+        ಆಘ್ರೇಯಃ ಸರ್ವದೇವಾನಾಂ ಧೂಪೋಽಯಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ || <br>
+        <span class="ENG">aaghreyah sarva-devaanaam dhoopo-ayam pratigrihyataam <br></span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ಧೂಪಂ ಆಘ್ರಾಪಯಾಮಿ <br>
         <span class="ENG">shree umaamaheshvaraabhyaam namah dhoopam aaghraapayaami <br></span>
@@ -180,13 +180,13 @@
     <h2>ದೀಪಂ<span class="ENG">Deepam</span></h2>
 
     <p>
-        ಸಾಜ್ಯಂ ತ್ರಿವರ್ತಿ ಸಂಯುಕ್ತಂ ವಹ್ನಿನಾ ಯೋಜಿತಂ ಮಯಾ <br>
+        ಸಾಜ್ಯಂ ತ್ರಿವರ್ತಿಸಂಯುಕ್ತಂ ವಹ್ನಿನಾ ಯೋಜಿತಂ ಮಯಾ |<br>
         <span class="ENG">saajyam trivarti samyuktam vahninaa yojitam mayaa <br></span>
-        ಗೃಹಾಣ ಮಂಗಳಂ ದೀಪಂ ತ್ರೈಲೋಕ್ಯ ತಿಮಿರಾಪಹಂ <br>
+        ಗ್ರಹಾಣ ಮಂಗಲದೀಪಂ ತ್ರೈಲೋಕ್ಯ ತಿಮಿರಾಪಹಂ ||<br>
         <span class="ENG">grihaana mangalam deepam trailokya timiraapaham <br></span>
-        ಭಕ್ತ್ಯಾ ದೀಪಂ ಪ್ರಯಚ್ಛಾಮಿ ದೇವಾಯ ಪರಮಾತ್ಮನೇ <br>
+        ಭಕ್ತ್ಯಾ ದೀಪಂ ಪ್ರಯಚ್ಛಾಮಿ ದೇವಾಯ ಪರಮಾತ್ಮನೇ |<br>
         <span class="ENG">bhaktyaa deepam prayacchaami devaaya paramaatmane <br></span>
-        ತ್ರಾಹಿಮಾಂ ನರಕಾದ್ಘೋರಾತ್ ದಿವ್ಯಜ್ಯೋತಿರ್ನಮೋಸ್ತುತೆ <br>
+        ತ್ರಾಹಿಮಾಂ ನರಕಾದ್ ಘೋರಾತ್ ದಿವ್ಯಜ್ಯೋತಿರ್ ನಮೋಽಸ್ತು ತೇ ||<br>
         <span class="ENG">traahimaam narakaad-ghoraat divyajyotir-namostute <br></span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ದೀಪಂ ದರ್ಶಯಾಮಿ <br>
@@ -199,9 +199,9 @@
     <h2>ನೈವೇದ್ಯಂ<span class="ENG">Naivaedyam</span></h2>
 
     <p>
-        ನೈವೇದ್ಯಂ ಗೃಹ್ಯತಾಂ ದೇವ ಭಕ್ತಿಂ ಮೇ ಹ್ಯಚಲಾಂ ಕುರು <br>
+        ನೈವೇದ್ಯಂ ಗೃಹ್ಯತಾಂ ದೇವ ಭಕ್ತಿಂ ಮೇ ಹ್ಯಚಲಾಂ ಕುರು | <br>
         <span class="ENG">naivedyam grihyataam deva bhaktim me hyachalaam kuru <br></span>
-        ಶಿವೇಪ್ಸಿತಂ ವರಂ ದೇಹಿ ಪರತ್ರ ಚ ಪರಾಂ ಗತಿಂ <br>
+        ಶಿವೇಪ್ಸಿತಂ ವರಂ ದೇಹಿ ಪರತ್ರ ಚ ಪರಾಂ ಗತಿಂ || <br>
         <span class="ENG">shivepsitam varam dehi paratra cha paraam gatim <br></span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ನೈವೇದ್ಯಂ ಸಮರ್ಪಯಾಮಿ <br>
@@ -212,9 +212,9 @@
 
     <p>
 
-        ಉಮಾಕಾಂತಾಯ ಕಾಂತಾಯ ಕಾಮಿತಾರ್ಥ ಪ್ರದಾಯಿನೇ <br>
+        ಉಮಾಕಾಂತಾಯ ಕಾಂತಾಯ ಕಾಮಿತಾರ್ಥ ಪ್ರದಾಯಿನೇ | <br>
         <span class="ENG">umaakaantaaya kaantaaya kaamitaartha pradaayine <br></span>
-        ಶ್ರೀಗಿರೀಶಾಯ ದೇವಾಯ ಮಲ್ಲಿನಾಥಾಯ ಮಂಗಳಂ <br>
+        ಶ್ರೀಗಿರೀಶಾಯ ದೇವಾಯ ಮಲ್ಲಿನಾಥಾಯ ಮಂಗಳಂ || <br>
         <span class="ENG">sree-gireeshaaya devaaya mallinaathaaya mangalam <br></span>
         <br>
         ಶ್ರೀ ಉಮಾಮಹೇಶ್ವರಾಭ್ಯಾಂ ನಮಃ ಕರ್ಪೂರ ನೀರಾಜನಂ ದರ್ಶಯಾಮಿ <br>
