--- a/stotram/pitru-devata-stotram.html
+++ b/stotram/pitru-devata-stotram.html
@@ -17,7 +17,7 @@
         <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
         <p>
-                ನಮಃ ಪಿತ್ರೇ ಜನ್ಮದಾತ್ರೇ ಸರ್ವ ದೇವಮಯಾಯ ಚ | <br>
+                ನಮಃ ಪಿತ್ರೇ ಜನ್ಮದಾತ್ರೇ ಸರ್ವದೇವಮಯಾಯ ಚ | <br>
                 ಸುಖದಾಯ ಪ್ರಸನ್ನಾಯ ಸುಪ್ರೀತಾಯ ಮಹಾತ್ಮನೇ || ೧ || <br>
                 <span class="ENG">
                         namaḥ pitr̥e janma-dātre sarva-deva-mayāya ca | <br>
@@ -25,7 +25,7 @@
                 </span>
                 <br>
 
-                ಸರ್ವಯಜ್ಞ ಸ್ವರೂಪಾಯ ಸ್ವರ್ಗಾಯ ಪರಮೇಷ್ಠಿನೇ | <br>
+                ಸರ್ವಯಜ್ಞಸ್ವರೂಪಾಯ ಸ್ವರ್ಗಾಯ ಪರಮೇಷ್ಠಿನೇ | <br>
                 ಸರ್ವತೀರ್ಥಾವಲೋಕಾಯ ಕರುಣಾಸಾಗರಾಯ ಚ || ೨ || <br>
                 <span class="ENG">
                         sarva-yajña-svarūpāya svargāya parameṣṭhine | <br>
@@ -34,7 +34,7 @@
                 <br>
 
                 ನಮಃ ಸದಾಽಽಶುತೋಷಾಯ ಶಿವರೂಪಾಯ ತೇ ನಮಃ | <br>
-                ಸದಾಽಪರಾಧ ಕ್ಷಮಿಣೇ ಸುಖಾಯ ಸುಖದಾಯ ಚ || ೩ || <br>
+                ಸದಾಽಪರಾಧಕ್ಷಮಿಣೇ ಸುಖಾಯ ಸುಖದಾಯ ಚ || ೩ || <br>
                 <span class="ENG">
                         namaḥ sadā-aśu-toṣāya śiva-rūpāya te namaḥ | <br>
                         sadā-aparādha-kṣamiṇe sukhāya sukha-dāya ca || 2 || <br>
@@ -49,7 +49,7 @@
                 </span>
                 <br>
 
-                ತೀರ್ಥಸ್ನಾನ ತಪೋಹೋಮ ಜಪಾದೀನ್ ಯಸ್ಯ ದರ್ಶನಮ್ |<br>
+                ತೀರ್ಥಸ್ನಾನತಪೋಹೋಮಜಪಾದೀನ್ ಯಸ್ಯ ದರ್ಶನಮ್ |<br>
                 ಮಹಾಗುರೋಶ್ಚ ಗುರವೇ ತಸ್ಮೈ ಪಿತ್ರೇ ನಮೋ ನಮಃ || ೫ ||<br>
                 <span class="ENG">
                         tīrtha-snāna tapo-homa japa-ādīn yasya darśanam | <br>
@@ -57,8 +57,8 @@
                 </span>
                 <br>
 
-                ಯಸ್ಯ ಪ್ರಣಾಮ ಸ್ತವನಾತ್ ಕೋಟಿಶಃ ಪಿತೃತರ್ಪಣಮ್ |<br>
-                ಅಶ್ವಮೇಧ ಶತೈಸ್ತುಲ್ಯಂ ತಸ್ಮೈ ಪಿತ್ರೇ ನಮೋ ನಮಃ || ೬ ||<br>
+                ಯಸ್ಯ ಪ್ರಣಾಮಸ್ತವನಾ ಕೋಟಿಶಃ ಪಿತೃತರ್ಪಣಮ್ |<br>
+                ಅಶ್ವಮೇಧಶತೈಸ್ತುಲ್ಯಂ ತಸ್ಮೈ ಪಿತ್ರೇ ನಮೋ ನಮಃ || ೬ ||<br>
                 <span class="ENG">
                         yasya praṇāma stavanāt koṭiśaḥ pitṛ-tarpaṇam | <br>
                         aśvamedha-śataiḥ tulyam tasmai pitr̥e namo namaḥ || 5 || <br>
